# drawn

./: .gitignore  .pre-commit-config.yaml  README.md  example.drawn  flow.drawn  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.drawn  dark.drawn  example_one.drawn  example_three.drawn  example_two.drawn  flow.drawn  light.drawn  matrix.drawn  presentation.drawn
drawn/: __init__.py  cli.py  compiler.py  config.py  old_compiler.py  old_reader.py  parser.py  reader.py  render.py  themes.py
drawn/model/: digraph.py
tests/: flow.drawn  test_all.py  test_compiler.py  test_parser.py  test_reader.py
