[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drawn"
version = "0.1.0"
description = "A minimal .drawn -> Graphviz diagram generator"
authors = [
    {name="Parth Ivr Menon", email="parthivrmenon@gmail.com"}
]
dependencies = [
    "graphviz",
]
requires-python = ">=3.8"

[project.scripts]
drawn = "drawn.cli:main"
